# os-configurator

./: README.md  configurator.py  pyproject.toml
